# switchyard

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  spec-ideation.html  spec.md
deploy/lxd-profiles/: switchyard.yaml
deploy/systemd/: README.md  post-receive.direct.example  switchyard-docker-tunnel@.service  switchyard.env.example  switchyard.service
switchyard-api/: .env.example  config.yaml  pyproject.toml
switchyard-api/src/switchyard/: __init__.py  app.py  logging.py  otel.py
switchyard-api/src/switchyard/adapters/: __init__.py  vllm.py
switchyard-api/src/switchyard/config/: loader.py  models.py
switchyard-api/src/switchyard/core/: __init__.py  adapter.py  docker.py  lifecycle.py  orphan.py  ports.py  registry.py  state.py
switchyard-api/tests/: conftest.py  test_adapter.py  test_api.py  test_app.py  test_app_settings.py  test_bootstrap.py  test_config_loader.py  test_config_models.py  test_config_resolution.py  test_docker_client.py  test_entity_models.py  test_errors.py  test_lifecycle.py  test_logging.py  test_orphan.py  test_otel.py  test_package.py  test_ports.py  test_proxy.py  test_registry.py  test_state.py  test_vllm_adapter.py  test_vllm_integration.py
switchyard-api/tests/fixtures/: minimal_config.yaml
switchyard-internal/planning/: ROADMAP.md  epic-api-object-management.md  epic-webui.md
switchyard-internal/process/: DEV.md  DEV_TEMPLATE_ADR.md  DEV_TEMPLATE_CONSULT.md  DEV_TEMPLATE_CONTEXT.md  DEV_TEMPLATE_DEVLOG.md  DEV_TEMPLATE_PLAN.md  DEV_TEMPLATE_PR.md  DEV_TEMPLATE_PRD.md  PYTHON.md
(+13 files in other folders)
