[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "switchyard"
version = "0.1.0"
description = "Control plane for managing heterogeneous LLM model runtimes"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "pydantic-settings",
    "pyyaml",
    "docker",
    "httpx",
    "structlog",
    "opentelemetry-api",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "mypy",
    "types-pyyaml",
    "opentelemetry-sdk",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
